# 2dSimViz

./: readme.md
client/: index.html  makefile  readme.md  styles.css  tsconfig.json
client/src/: common.ts  communication.ts  constants.ts  drawManager.ts  main.ts  messages.ts  model.ts  vec2.ts
example/: .gitignore  readme.md
example/compute/: .gitignore  compute.cpp  makefile
example/src/: CMakeLists.txt
example/src/compute/: CMakeLists.txt  package.xml
example/src/compute/src/: compute.cpp  makefile
example/src/dispatch/: CMakeLists.txt  package.xml
example/src/dispatch/src/: server.py
example/src/launcher/: package.xml
example/src/launcher/config/: costmap_common_params.yaml  limo_four_diff_control.yaml
example/src/launcher/launch/: explore_lite.launch  robot.launch
example/src/tools/: CMakeLists.txt  package.xml
example/src/tools/src/: drawMap.py
node/: .gitignore  makefile  readme.md  run.sh
node/include/: common.h  messages.h  parser.h
node/src/: main.cpp  parser.cpp
node/src/2dVizServer/: CMakeLists.txt  makefile  package.xml
node/src/2dVizServer/include/2dVizServer/: common.h  jsonParse.hpp  messages.h
node/src/2dVizServer/src/: main.cpp  parser.cpp
node/src/2dVizServer/test/: commonTest.h  main_t.cpp  parsing_t.cpp
node/test/: main_t.cpp  parsing_t.cpp
