<?xml version="1.0"?>
<package format="2">
  <name>2dVizServer</name>
  <version>0.0.0</version>
  <description>The 2dVizServer package</description>

  <maintainer email="codingpillar@gmail.com">Adam</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
